--- a/popup.html
+++ b/popup.html
@@ -1,43 +1,86 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <style type="text/css">
-    .box {
-        height: 200px;
-        width: 200px;
-        background: #EEE;
+    .all-con{
+        width: 240px;
+        height: 380px;
+        text-align: center;
+        background: white;
+    }
+    .title {
+        font-size: 16px;
+        color: black;
+        padding: 5px auto;
+    }
+    .erweima-con{
+        width: 180px;
+        height: 180px;
+        margin: 0 auto;
         position: relative;
     }
-    .box .title{
-        text-align: center;
-        margin-bottom: 10px;
-    }
-    .box .qrcode{
+    #qrcode{
         width: 100%;
         height: 100%;
-        position: absolute;
     }
-    .box .logo {
-          top: 80px;
-          left: 80px;
-          width: 40px;
-          height: 40px;
-          position: absolute;
+    #logo{
+        top: 50%;
+        left: 50%;
+        position: absolute;
+        transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+        width: 20px;
+        height: 20px;
+        opacity: 0;
+    }
+
+    textarea{
+        width: 200px;
+        height: 60px;
+        margin: 0 auto;
+        color: black;
+        box-sizing: border-box;
+        border: 1px solid black;
+        margin-top: 10px;
+    }
+    textarea:focus{
+        border: 1px solid black;
+        outline:none;
+        box-shadow:none;
+        -webkit-box-shadow:none;
+        -moz-box-shadow:none;
+        -webkit-appearance:none;
+      }
+
+    .surebtn{
+        width: 200px;
+        height: 32px;
+        font-size: 20px;
+        color: white;
+        text-align: center;
+        line-height: 32px;
+        margin: 20px auto;
+        background: green;
     }
 </style>
+
 <body>
-<div class="box">
-    <div class="title">扫描二维码浏览本页面</div>
-    <center>
-    <div class="qrcode" id="qrcode"></div>
-    <div class='logo' id="logo">
-    <img src="http://amoyiki.github.io/images/avatar.jpg" width="40" height="40"/>
+    <div class="all-con">
+        <p class="title">扫描二维码浏览本页面</p>
+        <!-- erweima -->
+        <div class="erweima-con">
+            <div id="qrcode"></div>
+            <img id="logo" src="">
+        </div>
+        <!-- 自定义 -->
+        <textarea id="intext"></textarea>
+        <div class="surebtn">确定</div>
     </div>
-    </center>
-</div>
-<script src="js/qrcode.js" type="text/javascript"></script>
-<script src="js/popup.js" type="text/javascript"></script>
+    <script src="js/qrcode.js" type="text/javascript"></script>
+    <script src="js/popup.js" type="text/javascript"></script>
 </body>
+
 </html>
